--- a/src/login.html
+++ b/src/login.html
@@ -8,7 +8,7 @@
   </head>
   <body>
   <div class="flex flex-col justify-center items-center min-h-screen bg-gray-800 px-4 py-6">
-    <h2 class="text-2xl md:text-3xl m-3 p-3 text-white font-semibold font-mono text-center">Welcome to SeniorGram</h2>
+    <h2 class="text-2xl md:text-3xl m-3 p-3 text-white font-semibold font-mono text-center">Welcome to SilverGram</h2>
     <div class="w-full max-w-md flex flex-col justify-center items-center bg-gray-600 p-6 md:p-8 rounded-2xl shadow-lg">
       <input type="email" placeholder="Email" class="w-full m-2 p-4 text-xl text-white bg-gray-700 rounded-lg border-2 border-gray-500 focus:border-orange-600 focus:outline-none"/>
       <input type="password" placeholder="Password" class="w-full m-2 p-4 text-xl text-white bg-gray-700 rounded-lg border-2 border-gray-500 focus:border-orange-600 focus:outline-none"/>
