Updated index page with improved styling and responsive design

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-800">
     <header class="bg-orange-600 text-white p-4 shadow-lg">
         <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-3xl font-bold">SeniorGram</h1>
+            <h1 class="text-3xl font-bold">SilverGram</h1>
             <div class="hidden md:flex text-xl">
                 <a href="#" class="mr-4 p-2 bg-orange-700 rounded-lg">Home Page</a>
                 <a href="#" class="p-2 bg-orange-700 rounded-lg">My Profile</a>
